--- a/style.css
+++ b/style.css
@@ -11,8 +11,9 @@ h1 {
     color: orange;
 }
 
-section {
+.fexible-container {
     display: flex;
+    margin-bottom: 100px;
 }
 
 .half-width {
@@ -36,4 +37,31 @@ section {
 .top-bannar {
     background-image: url(images/top-banner.png);
     background-repeat: no-repeat;
+}
+
+.dream-big {
+    background-image: url(images/dream-bg.png);
+    background-repeat: no-repeat;
+    background-position: right;
+}
+
+.experience-gain {
+    width: 40%;
+    margin-left: 5%;
+    margin-right: 5%;
+    padding-left: 20px;
+    box-shadow: 10px 10px 40px gray;
+
+}
+
+#full-st-dev {
+    border-left: 7px solid tomato;
+}
+
+#baby-stack-dev {
+    border-left: 7px solid blue;
+}
+
+footer p {
+    text-align: center;
 }
